hard-gists/795cc1fd6d0c9069b20204cbd133e36b/run.log
=== Docker Run Log for 795cc1fd6d0c9069b20204cbd133e36b ===
Started at: Mi 29. Okt 17:23:28 CET 2025

[2025-10-29 17:23:28] START: Running container for 795cc1fd6d0c9069b20204cbd133e36b
[2025-10-29 17:23:29] SUCCESS: Container 9d37c226aed2847b521a7db6a32c579c3e5c3cbc050a299d58f0475f4f0d1869 started for 795cc1fd6d0c9069b20204cbd133e36b
=== Container logs for 795cc1fd6d0c9069b20204cbd133e36b ===
  File "/snippet.py", line 44
    print "output", output
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 795cc1fd6d0c9069b20204cbd133e36b ===
[2025-10-29 17:23:31] INFO: Container 9d37c226aed2847b521a7db6a32c579c3e5c3cbc050a299d58f0475f4f0d1869 has stopped
